--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,1 @@
-set -g mouse on
-
-# bw status bar
-#set-option status-left "[#S] "
-#set-option status-style fg=white,bg=black
-
-set-window-option -g window-status-style fg=colour244
-set-window-option -g window-status-style bg=default
-set-window-option -g window-status-current-style fg=colour166
-set-window-option -g window-status-current-style bg=default
+/Users/zidoo/.tmux.conf
