--- a/tmux.conf
+++ b/tmux.conf
@@ -1,1 +1,38 @@
-/Users/zidoo/.tmux.conf
+set-option -g mouse on
+setw -g history-limit 1000000
+set -g default-terminal "screen-256color"
+
+set -g status-bg black
+set -g status-fg white
+
+set-window-option -g window-status-current-style bg=red
+set -g status-left-length 30
+set -g status-right-length 150
+
+set-window-option -g window-status-style bg=colour214,fg=colour237
+set-window-option -g window-status-current-style bg=red,fg=colour237
+set-option -g pane-active-border-style fg=colour214
+
+set-option -g status-left "\
+#[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167],} ❐ #S \
+#[fg=colour241, bg=colour237]#{?client_prefix,#[fg=colour167],}#{?window_zoomed_flag, ,}"
+
+set-option -g status-right "\
+#[fg=colour246, bg=colour237] %d %b\
+#[fg=colour109] %H:%M \
+#[fg=colour248, bg=colour239]"
+
+set-window-option -g window-status-current-format "\
+#[fg=colour239, bg=colour214] #I \
+#[fg=colour239, bg=colour214, bold]#W \
+#[fg=colour214, bg=colour237]"
+
+set-window-option -g window-status-format "\
+#[fg=colour223,bg=colour239] #I \
+#[fg=colour223, bg=colour239]#W \
+#[fg=colour239, bg=colour237]"
+
+set -g pane-border-style fg=gray,bg=black
+set -g pane-active-border-style fg=gray,bg=black
+set-window-option -g window-active-style bg=terminal
+set-window-option -g window-style bg=black
